[package]
name = "pre-const-generics-impl-tests"
version = "0.0.0"
authors = ["aticu <15schnic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pre = { path = "../main", default-features = false, features = ["const-generics-impl"] }
trybuild = "1.0"
