[package]
name = "pre"
version = "0.1.0"
authors = ["Niclas Schwarzlose <15schnic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Compile-time assistance for working with unsafe code."
repository = "https://github.com/aticu/pre"
keywords = ["unsafe", "safety", "pre", "assure", "attribute", "annotation", "compile-time", "zero-cost", "no_std", "proc-macro"]
categories = ["development-tools", "no-std", "rust-patterns"]
readme = "../README.md"
edition = "2018"

[dependencies]
pre-proc-macro = { version = "0.1", path = "../proc-macro" }
cfg-if = "0.1"

[build-dependencies]
rustc_version = "0.2"
