[package]
name = "pre-proc-macro"
version = "0.1.0"
authors = ["aticu <15schnic@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro-crate = "0.1"
cfg-if = "0.1"

[build-dependencies]
rustc_version = "0.2"
