[package]
name = "pre-proc-macro"
version = "0.1.0"
authors = ["Niclas Schwarzlose <15schnic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural marco implementations for [pre](https://crates.io/crates/pre/)."
repository = "https://github.com/aticu/pre"
keywords = ["unsafe", "safety", "compile-time", "zero-cost", "no_std"]
categories = ["development-tools", "no-std", "rust-patterns"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.23", features = ["full", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro-crate = "0.1.5"
cfg-if = "0.1.6"
lazy_static = "1.4"

[build-dependencies]
rustc_version = "0.2"
