[package]
name = "pre-tests"
version = "0.0.0"
authors = ["Niclas Schwarzlose <15schnic@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = false

[dev-dependencies]
pre = { path = "../main" }
trybuild = { version = "1.0", features = ["diff"] }

[build-dependencies]
rustc_version = "0.2"
