[package]
name = "pre-tests"
version = "0.0.0"
authors = ["Niclas Schwarzlose <15schnic@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Integration tests for `pre`."
repository = "https://github.com/aticu/pre"
keywords = ["unsafe", "safety", "compile-time", "zero-cost", "no_std"]
categories = ["development-tools", "no-std", "rust-patterns"]
readme = "../README.md"
edition = "2018"
publish = false

[dev-dependencies]
pre = { path = "../main" }
trybuild = { version = "1.0", features = ["diff"] }

[build-dependencies]
rustc_version = "0.2"
